[package]
name = "graveyard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.29"
crossterm = "0.25.0"
ratatui = "0.20.1"
serde = "1.0.160"
tokio = { version = "1.22.0", features = ["full"] }
